--- a/mimo1.html
+++ b/mimo1.html
@@ -4,8 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>mimosa1</title>
+    <link rel="stylesheet" href="designs/designs2.css">
 </head>
 <body>
-    
+    <div>
+        <h1>Mimosa</h1>
+        <p>She is a dynamic and energetic person. You can't ignore her whenever you got touched with her behavior and gentle <activities class="br">
+        She might not the beauty queen and what we say, like glamour girl. But you have to acknowledge her responsibilities and dutifulness to assigned work. She works so hard to maintain her family to be happy. So hardship goes through her body and mind limit but she never broke herself.
+        </activities></p>
+    </div>
+    <div>
+        <h1>Mimosa 2</h1>
+        <p>She is a dynamic and energetic person. You can't ignore her whenever you got touched with her behavior and gentle <activities class="br">
+        She might not the beauty queen and what we say, like glamour girl. But you have to acknowledge her responsibilities and dutifulness to assigned work. She works so hard to maintain her family to be happy. So hardship goes through her body and mind limit but she never broke herself.
+        </activities></p>
+    </div>
+    <div>
+        <h1>Mimosa 3</h1>
+        <p>She is a dynamic and energetic person. You can't ignore her whenever you got touched with her behavior and gentle <activities class="br">
+        She might not the beauty queen and what we say, like glamour girl. But you have to acknowledge her responsibilities and dutifulness to assigned work. She works so hard to maintain her family to be happy. So hardship goes through her body and mind limit but she never broke herself.
+        </activities></p>
+    </div>
 </body>
 </html>
