her first appearnce

--- a/mimo1.html
+++ b/mimo1.html
@@ -8,22 +8,34 @@
 </head>
 <body>
     <div>
+<h1>welcome smile</h1>
+<img src="sharmila_sheraton.jpg" alt="">
+    </div>
+    <div class="mi">
         <h1>Mimosa</h1>
         <p>She is a dynamic and energetic person. You can't ignore her whenever you got touched with her behavior and gentle <activities class="br">
         She might not the beauty queen and what we say, like glamour girl. But you have to acknowledge her responsibilities and dutifulness to assigned work. She works so hard to maintain her family to be happy. So hardship goes through her body and mind limit but she never broke herself.
         </activities></p>
     </div>
-    <div>
+    <div class="mo">
         <h1>Mimosa 2</h1>
         <p>She is a dynamic and energetic person. You can't ignore her whenever you got touched with her behavior and gentle <activities class="br">
         She might not the beauty queen and what we say, like glamour girl. But you have to acknowledge her responsibilities and dutifulness to assigned work. She works so hard to maintain her family to be happy. So hardship goes through her body and mind limit but she never broke herself.
         </activities></p>
     </div>
-    <div>
+    <div class="sa">
         <h1>Mimosa 3</h1>
         <p>She is a dynamic and energetic person. You can't ignore her whenever you got touched with her behavior and gentle <activities class="br">
         She might not the beauty queen and what we say, like glamour girl. But you have to acknowledge her responsibilities and dutifulness to assigned work. She works so hard to maintain her family to be happy. So hardship goes through her body and mind limit but she never broke herself.
         </activities></p>
+    </div>
+    <div>
+        <h3>Her responsibilities</h3>
+        <ol type="1">
+            <li>Principal officer at Janata Bank</li>
+            <li>sincere care to her father at every night</li>
+            <li>presence to her husband</li>
+        </ol>
     </div>
 </body>
 </html>
